adding new image to portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -42,8 +42,8 @@
                 <hr>
 
                 <div class="image-container">
-                    <img src="assets/images/airline.jpg" alt="airplane in fight">
-                <div class="desc-box">GedOUTTAhere Airlines</div>
+                    <img src="assets/images/greatNorthern.jpg" alt="The Great Northern Hotel">
+                <div class="desc-box">Twin Peaks Word-Guess-Game</div>
                 </div>
 
                 <div class="image-container">
