Updated portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -43,17 +43,17 @@
 
                 <div class="image-container">
                     <img src="assets/images/greatNorthern.jpg" alt="The Great Northern Hotel">
-                <div class="desc-box">Twin Peaks Word-Guess-Game</div>
+                <div class="desc-box">Word-Guess-Game</div>
                 </div>
 
                 <div class="image-container">
-                    <img src="assets/images/bookstore.jpg" alt="Best bookstore ever">
-                <div class="desc-box">The Last Best Bookstore</div>
+                    <img src="assets/images/ruby.png" alt="Best bookstore ever">
+                <div class="desc-box">Crystal Challenge</div>
                 </div>
 
                 <div class="image-container">
-                    <img src="assets/images/history-blog.JPG" alt="Hot rods racing in 1950s Los Angeles">
-                <div class="desc-box">Mid-Century History Blog</div>
+                    <img src="assets/images/galadriel.jpg" alt="Galadriel, lady of the Golden Wood">
+                <div class="desc-box">Trivia Game</div>
                 </div>
 
                 <div class="image-container">
