added Giftastic to portfolio.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -47,7 +47,7 @@
                 </div>
 
                 <div class="image-container">
-                    <img src="assets/images/ruby.png" alt="Best bookstore ever">
+                    <img src="assets/images/ruby.png" alt="A precious ruby">
                 <div class="desc-box">Crystal Challenge</div>
                 </div>
 
@@ -57,8 +57,8 @@
                 </div>
 
                 <div class="image-container">
-                    <img src="assets/images/museum.jpg" alt="Anglo Saxon Warrior's Helm">
-                <div class="desc-box">Museum of Old Stuff</div>
+                    <img src="assets/images/giphy.jpg" alt="giphy.com">
+                <div class="desc-box">GifTastic!</div>
                 </div>
         
                 <div class="image-container">
