added train scheduler to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -62,8 +62,8 @@
                 </div>
         
                 <div class="image-container">
-                    <img src="assets/images/soda-fountain.jpg" alt="1950s Soda Fountain">
-                <div class="desc-box">The Swell Soda Fountain</div>
+                    <img src="assets/images/LAUS.jpg" alt="Los Angeles Union Station">
+                <div class="desc-box">Train Scheduler</div>
                 </div>
 
             </div>    
