--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </header>
         <main>
             <section class="clearfix" id="main-container">
-                <h2>About Me</h2>
+                <h2 id="page-title">About Me</h2>
                 <hr>
                 <div class="main-content">
                     <img src="assets/images/fashion-lorempixel-200X200.jpg" id="index-image">
