--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
 
         <section class="clearfix" id="form-area">
 
-            <h2>Contact</h2>
+            <h2 id="page-title">Contact</h2>
 
             <hr>
 
