--- a/portfolio.html
+++ b/portfolio.html
@@ -22,38 +22,40 @@
         <main>
             <section>
                 <div class="portfolio-area">
-                    <h2>Portfolio</h2>
+                    <h2 id="page-title">Portfolio</h2>
                     <hr>
-                    <div class="project-container">
-                        <div class="image-container">
-                            <a href="https://19stesha69.github.io/Word-Guess-Game/">
-                                <img src="assets/images/greatNorthern.jpg" alt="The Great Northern Hotel">
-                                <div class="desc-box">Word-Guess-Game</div>
-                            </a>
-                        </div>
-                        <div class="image-container">
-                            <a href="https://19stesha69.github.io/unit-4-game/">
-                                <img src="assets/images/ruby.png" alt="A precious ruby">
-                                <div class="desc-box">Crystal Challenge</div>
-                            </a>
-                        </div>
-                        <div class="image-container">
-                            <a href="https://19stesha69.github.io/TriviaGame/">
-                                <img src="assets/images/galadriel.jpg" alt="Galadriel, lady of the Golden Wood">
-                                <div class="desc-box">Trivia Game</div>
-                            </a>
-                        </div>
-                        <div class="image-container">
-                            <a href="https://19stesha69.github.io/Giftastic/">
-                                <img src="assets/images/giphy.jpg" alt="giphy.com">
-                                <div class="desc-box">GifTastic!</div>
-                            </a>
-                        </div>
-                        <div class="image-container">
-                            <a href="https://19stesha69.github.io/Train-Scheduler/">
-                                <img src="assets/images/LAUS.jpg" alt="Los Angeles Union Station">
-                                <div class="desc-box">Train Scheduler</div>
-                            </a>
+                    <div class="project-outer-container">
+                        <div class="project-container">
+                            <div class="image-container">
+                                <a href="https://19stesha69.github.io/Word-Guess-Game/">
+                                    <img src="assets/images/greatNorthern.jpg" alt="The Great Northern Hotel">
+                                    <div class="desc-box">Word-Guess-Game</div>
+                                </a>
+                            </div>
+                            <div class="image-container">
+                                <a href="https://19stesha69.github.io/unit-4-game/">
+                                    <img src="assets/images/ruby.png" alt="A precious ruby">
+                                    <div class="desc-box">Crystal Challenge</div>
+                                </a>
+                            </div>
+                            <div class="image-container">
+                                <a href="https://19stesha69.github.io/TriviaGame/">
+                                    <img src="assets/images/galadriel.jpg" alt="Galadriel, lady of the Golden Wood">
+                                    <div class="desc-box">Trivia Game</div>
+                                </a>
+                            </div>
+                            <div class="image-container">
+                                <a href="https://19stesha69.github.io/Giftastic/">
+                                    <img src="assets/images/giphy.jpg" alt="giphy.com">
+                                    <div class="desc-box">GifTastic!</div>
+                                </a>
+                            </div>
+                            <div class="image-container">
+                                <a href="https://19stesha69.github.io/Train-Scheduler/">
+                                    <img src="assets/images/LAUS.jpg" alt="Los Angeles Union Station">
+                                    <div class="desc-box">Train Scheduler</div>
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>    
