--- a/index.html
+++ b/index.html
@@ -23,17 +23,21 @@
                 <hr>
                 <div class="main-content">
                     <img src="assets/images/fashion-lorempixel-200X200.jpg" id="index-image">
-                    <h3><b>The internet is a window to the world.</b></h3>
-                    <br>
-                        <p>Ever since I took my first step on to the world wide web, I was amazed at what I found - ideas, 
-                            cultures, experiences that would require many trips around the globe, as well as a lifetime, to 
-                            know otherwise. From that moment, I was hooked, a happy denizen of a connected world.</p>
+                    <div id="index-content">
+                        <h3><b>The internet is a window to the world.</b></h3>
                         <br>
-                        <p>When I found myself at a crossroads in my life, I decided to step out - far out - of my comfort 
-                            zone and learn how to make a presence on the web. It was challenging, at times frustrating, but 
-                            ultimately rewarding. Once I realized that a computer ins't an evil being, its will set against me, 
-                            but rather a machine, operating according to its own, albeit curious, brand of logic, I stoped 
-                            worrying and learned to love web design and devopment.</p>
+                            <p>Ever since I took my first step on to the world wide web, I was amazed at what I found - ideas, 
+                                cultures, experiences that would require many trips around the globe, as well as a lifetime, to 
+                                know otherwise. From that moment, I was hooked, a happy denizen of a connected world.
+                            </p>
+                            <br>
+                            <p>When I found myself at a crossroads in my life, I decided to step out - far out - of my comfort 
+                                zone and learn how to make a presence on the web. It was challenging, at times frustrating, but 
+                                ultimately rewarding. Once I realized that a computer ins't an evil being, its will set against me, 
+                                but rather a machine, operating according to its own, albeit curious, brand of logic, I stoped 
+                                worrying and learned to love web design and devopment.
+                            </p>
+                    </div>
                 </div>
             </section>
         </main>
