--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <div class="main-content">
                     <img src="assets/images/fashion-lorempixel-200X200.jpg" id="index-image">
                     <div id="index-content">
-                        <h3><b>The internet is a window to the world.</b></h3>
+                        <h3>The internet is a window to the world.</h3>
                         <br>
                             <p>Ever since I took my first step on to the world wide web, I was amazed at what I found - ideas, 
                                 cultures, experiences that would require many trips around the globe, as well as a lifetime, to 
